--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html>
   <head>
     <title>Video Player</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Video Player</h1>
-      <form id="video-form">
-        <label for="video-link">Enter Video Link:</label>
-        <input type="text" id="video-link" required>
-        <button type="submit">Play</button>
-      </form>
-      <div id="video-container">
-        <video controls id="video-player"></video>
-      </div>
-    </div>
-    <h2>Recent Selections</h2>
-    <ul id="recent-selections"></ul>
-    <button id="clearAllBtn">Clear All Selections</button>
-    <script src="script.js"></script>
+    <video
+        id="plyr"
+        poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg"
+      >
+        <source
+          src="https://tfs301.dl4all.online/d/e4qdh4ntfsrnuwfu2z6i5774w43tw3foxanpzlt6fec7vzp6fv6uif646wrnxnqvplktws7h/video.mp4"
+          type="video/mp4"
+        />
+    </video>
+    <style>* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}</style>
+    <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
+    <script>
+      const player = new Plyr('#plyr');
+    </script>
   </body>
 </html>
