--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html>
   <head>
     <title>Video Player</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
   </head>
   <body>
-    <video
+    <div class="container">
+      <h1>Video Player</h1>
+      <form id="video-form">
+        <label for="video-link">Enter Video Link:</label>
+        <input type="text" id="video-link" required>
+        <button type="submit">Play</button>
+      </form>
+      <div id="video-container">
+        <video
         id="plyr"
-        poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg"
+        poster="https://occ-0-8407-1361.1.nflxso.net/dnm/api/v6/9pS1daC2n6UGc3dUogvWIPMR_OU/AAAABcX-woMfv9-gFJ4EN_L5-MyeEQU3vRfxslp6TWwMwtstO3QVxJ5fV4Hhc_MEt1XUBnZdAMqfzmERRteLsfHI4XMrXqCkO1doK3UsPWKr0HjTOpNzWZa-i_Md.jpg?r=994g"
       >
         <source
           src="https://tfs301.dl4all.online/d/e4qdh4ntfsrnuwfu2z6i5774w43tw3foxanpzlt6fec7vzp6fv6uif646wrnxnqvplktws7h/video.mp4"
           type="video/mp4"
         />
     </video>
-    <style>* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}</style>
+      </div>
+    </div>
+    <h2>Recent Selections</h2>
+    <ul id="recent-selections"></ul>
+    <button id="clearAllBtn">Clear All Selections</button>
     <script src="https://cdn.plyr.io/3.6.4/plyr.js"></script>
     <script>
       const player = new Plyr('#plyr');
     </script>
+    <script src="script.js"></script>
   </body>
 </html>
