--- a/one.html
+++ b/one.html
@@ -21,12 +21,12 @@
       >
 
 <source
-          src="https://rus174q.cloudatacdn.com/u5kjyuvyglc3sdgge42papa6j37k6pylz3b5xx4kecyslboejjlivkgix4ha/j89zidbph7~5AVl6sKr5a?token=meqi98a7esfouizulbnf8pu0&expiry=1737300306511"
+          src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4"
           type="video/mp4"
           size="480"
         />
         <source
-          src="https://fl1106ql.cloudatacdn.com/u5kjzo52glc3sdgge427ayymjgyhgcnqsvhezjbgiomrnlqapminsvstyqeq/at2a063bc0~IgH4wWye3L?token=we1bmyb796598fm003xg0o4q&expiry=1737300410045"
+          src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4"
           type="video/mp4"
           size="720"
         />
