--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
       >
 
 <source
-          src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4"
+          src="https://tfs81.dl4all.online/d/nqqdb4ntfsrnuwfu2z6ij7nx7hrwvjog6s2gsn2morccaho5qekozwnoh3j5yafeeooj2sw3/video.mp4"
           type="video/mp4"
           size="480"
         />
