--- a/third.html
+++ b/third.html
@@ -11,14 +11,19 @@
       >
 
 <source
-          src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4"
+          src="https://tfs114.dl4all.online/d/qiqdn4ntfsrnuwfu2z6npoxi7dedawk7pjkqyvqndk27qazlxyv74y2ccyvflb2aep75sufa/video.mp4"
           type="video/mp4"
           size="480"
         />
         <source
-          src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4"
+          src="https://tfsrts116.dl4all.online/d/tqqdp4ntfsrnuwfu2z6ih6pg66vykcbnyztrj4e5uyufy4b4o66fshwvqeyz4awovprmt7ta/video.mp4"
           type="video/mp4"
           size="720"
+        />
+        <source
+          src="https://pa1054do.cloudatacdn.com/u5kjxmfyglc3sdgge42papy3jj67wi62il5pjbi734faeatanvwdpkivvjca/uwuqswsgzt~nemPCvCGnC?token=5w6u7m1c0aasauyf2irukmgb&expiry=1737892632872"
+          type="video/mp4"
+          size="1080"
         />
     </video>
    
